tools/sddl2/assembler/tests/success/push_i64_1000000.asm
push.i64 1000000
halt
