tools/sddl2/assembler/tests/fail/push_i64_missing_param.asm
# EXPECT-ERROR: requires 1 parameter
push.i64
halt
